Change workers config to include jkmanager
Signed-off-by: Mario Kleinsasser <mario.kleinsasser@gmail.com>

--- a/examples/apache-httpd-tomcat/df-bosnd-httpd/site.template
+++ b/examples/apache-httpd-tomcat/df-bosnd-httpd/site.template
@@ -10,5 +10,8 @@ JkShmFile     /var/log/mod_jk.shm
   JkMount {{index $entry.Labels "context"}}/* {{$entry.Name}}lb
   {{end}}
   {{end}}
+  
+  JkMount /jkmanager jkstatus
+  JkMount /jkmanager/* jkstatus
 
 </VirtualHost>
