Add jkstatus and screenshot2
Signed-off-by: Mario Kleinsasser <mario.kleinsasser@gmail.com>

--- a/examples/apache-httpd-tomcat/df-bosnd-httpd/workers.template
+++ b/examples/apache-httpd-tomcat/df-bosnd-httpd/workers.template
@@ -17,3 +17,6 @@ worker.{{$ep.Hostname}}.lbfactor=1
 {{end}}
 # --------------------------------
 {{end}}
+
+# JKSTATUS
+ worker.jkstatus.type=status
